@@ -1,4 +1,7 @@
-$Id: Changelog.txt,v 1.449 2019/06/25 21:28:28 nanard Exp $
+$Id: Changelog.txt,v 1.450 2019/08/24 08:42:50 nanard Exp $
+
+2019/08/24:
+  Small fixes in netfilter code
 
 2019/06/25:
   Update netfilter nftables code
